@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-04-09 02:27:41 asaim Exp $
+$Id: History,v 1.4 1999-04-14 10:45:53 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Apr 14, 99 H.Kurashige (tag run-01-00-02)
+- "buildPhysicsTable" command is added in G4UserPhysicsListMessenger
 
 Apr 09, 99 M.Asai (tag run-01-00-01)
 - Argument of G4UserRunAction methods bcomes to const.
